issue #1 Get tril and tests compiling successfully

--- a/fvtest/CMakeLists.txt
+++ b/fvtest/CMakeLists.txt
@@ -23,3 +23,5 @@ include(OmrAssert)
 
 add_subdirectory(omrGtestGlue)
 add_subdirectory(compilertest)
+add_subdirectory(tril)
+add_subdirectory(compilertriltest)
