--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,7 +126,7 @@ endif()
 add_subdirectory(third_party)
 add_subdirectory(compiler)
 add_subdirectory(jitbuilder)
-add_subdirectory(experimental)
+add_subdirectory(frontends)
 add_subdirectory(util)
 add_subdirectory(fvtest)
 
