--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,6 +127,7 @@ add_subdirectory(third_party)
 add_subdirectory(compiler)
 add_subdirectory(jitbuilder)
 add_subdirectory(frontends)
+add_subdirectory(c-api)
 add_subdirectory(util)
 add_subdirectory(fvtest)
 
