move c-api into jitbuilder project to fix Linux build ... maybe it should live there permanently?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,8 +126,8 @@ endif()
 add_subdirectory(third_party)
 add_subdirectory(compiler)
 add_subdirectory(jitbuilder)
-add_subdirectory(frontends)
-add_subdirectory(c-api)
+#add_subdirectory(frontends)
+#add_subdirectory(c-api)
 add_subdirectory(util)
 add_subdirectory(fvtest)
 
