--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,9 +125,8 @@ endif()
 ###
 add_subdirectory(third_party)
 add_subdirectory(compiler)
-add_subdirectory(jitbuilder)
-#add_subdirectory(frontends)
-#add_subdirectory(c-api)
+#add_subdirectory(jitbuilder)
+add_subdirectory(frontends)
 add_subdirectory(util)
-add_subdirectory(fvtest)
+#add_subdirectory(fvtest)
 
