--- a/frontends/minimal/CMakeLists.txt
+++ b/frontends/minimal/CMakeLists.txt
@@ -6,9 +6,21 @@ set(API_FILES
 	env/FrontEnd.cpp
 	ilgen/NJIlGeneratorMethodDetails.cpp
 	ilgen/NJIlGenerator.cpp
-	ilgen/JIT_API.cpp
+	#ilgen/nj_api.cpp
 	runtime/NJCodeCacheManager.cpp
 	runtime/NJJitConfig.cpp
+)
+
+# To reduce size we try to exclude code that we
+# don't need
+set(FILTER_FILES
+	${omr_SOURCE_DIR}/compiler/ilgen/IlBuilder.cpp
+	${omr_SOURCE_DIR}/compiler/ilgen/IlValue.cpp
+	${omr_SOURCE_DIR}/compiler/ilgen/IlInjector.cpp
+	${omr_SOURCE_DIR}/compiler/ilgen/MethodBuilder.cpp
+	${omr_SOURCE_DIR}/compiler/ilgen/BytecodeBuilder.cpp
+	${omr_SOURCE_DIR}/compiler/ilgen/TypeDictionary.cpp
+	${omr_SOURCE_DIR}/compiler/ilgen/ThunkBuilder.cpp		
 )
 
 # Create njmin library
@@ -18,6 +30,7 @@ create_omr_compiler_library(
 	NAME    njmin
 	DEFINES NONJAVA
 	OBJECTS ${API_FILES}
+	FILTER ${FILTER_FILES}
 )
 
 target_link_libraries(njmin
