--- a/compiler/ilgen/CMakeLists.txt
+++ b/compiler/ilgen/CMakeLists.txt
@@ -21,12 +21,12 @@
 
 compiler_library(ilgen
 	${CMAKE_CURRENT_LIST_DIR}/IlGenRequest.cpp
-#	${CMAKE_CURRENT_LIST_DIR}/IlBuilder.cpp
-#	${CMAKE_CURRENT_LIST_DIR}/IlValue.cpp
-#	${CMAKE_CURRENT_LIST_DIR}/IlInjector.cpp
-#	${CMAKE_CURRENT_LIST_DIR}/MethodBuilder.cpp
-#	${CMAKE_CURRENT_LIST_DIR}/BytecodeBuilder.cpp
-#	${CMAKE_CURRENT_LIST_DIR}/TypeDictionary.cpp
+	${CMAKE_CURRENT_LIST_DIR}/IlBuilder.cpp
+	${CMAKE_CURRENT_LIST_DIR}/IlValue.cpp
+	${CMAKE_CURRENT_LIST_DIR}/IlInjector.cpp
+	${CMAKE_CURRENT_LIST_DIR}/MethodBuilder.cpp
+	${CMAKE_CURRENT_LIST_DIR}/BytecodeBuilder.cpp
+	${CMAKE_CURRENT_LIST_DIR}/TypeDictionary.cpp
 	${CMAKE_CURRENT_LIST_DIR}/ThunkBuilder.cpp
 	${CMAKE_CURRENT_LIST_DIR}/VirtualMachineOperandStack.cpp
 )
