get tests working and cleanup stuff

--- a/frontends/minimal/CMakeLists.txt
+++ b/frontends/minimal/CMakeLists.txt
@@ -6,13 +6,14 @@ set(API_FILES
 	env/FrontEnd.cpp
 	ilgen/NJIlGeneratorMethodDetails.cpp
 	ilgen/NJIlGenerator.cpp
-	#ilgen/nj_api.cpp
+	ilgen/nj_api.cpp
 	runtime/NJCodeCacheManager.cpp
 	runtime/NJJitConfig.cpp
 )
 
 # To reduce size we try to exclude code that we
-# don't need
+# don't need - for now this consists of some of the 
+# JitBuilder code 
 set(FILTER_FILES
 	${omr_SOURCE_DIR}/compiler/ilgen/IlBuilder.cpp
 	${omr_SOURCE_DIR}/compiler/ilgen/IlValue.cpp
@@ -27,18 +28,18 @@ set(FILTER_FILES
 # The create_omr_compiler_library() function
 # will add all the backend Compiler code to the library
 create_omr_compiler_library(
-	NAME    njmin
+	NAME    nj
 	DEFINES NONJAVA
 	OBJECTS ${API_FILES}
 	FILTER ${FILTER_FILES}
 )
 
-target_link_libraries(njmin
+target_link_libraries(nj
 )
 
 install(FILES ilgen/nj_api.h
         DESTINATION include/nj)
-install(TARGETS njmin
+install(TARGETS nj
         RUNTIME DESTINATION bin
         ARCHIVE DESTINATION lib
         LIBRARY DESTINATION lib)
