linj should be shared lib on Linux

--- a/frontends/nj/CMakeLists.txt
+++ b/frontends/nj/CMakeLists.txt
@@ -24,11 +24,18 @@ set(FILTER_FILES
 	${omr_SOURCE_DIR}/compiler/ilgen/ThunkBuilder.cpp		
 )
 
+if (NOT OMR_TOOLCONFIG MATCHES "msvc")
+        # On Linux at least creating static library
+        # makes it hard to link with C code
+        set(NJ_LIB_TYPE SHARED)
+endif()
+
 # Create njmin library
 # The create_omr_compiler_library() function
 # will add all the backend Compiler code to the library
 create_omr_compiler_library(
 	NAME    nj
+	${NJ_LIB_TYPE}
 	DEFINES NONJAVA
 	OBJECTS ${API_FILES}
 	FILTER ${FILTER_FILES}
