--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,10 +155,10 @@ endif()
 ###
 add_subdirectory(third_party)
 add_subdirectory(compiler)
-add_subdirectory(jitbuilder)
+##add_subdirectory(jitbuilder)
 add_subdirectory(frontends)
-add_subdirectory(util)
-add_subdirectory(fvtest)
+##add_subdirectory(util)
+##add_subdirectory(fvtest)
 
 
 # Export CMake Module
